Added handler; Removed the search prefix to reuse partials

--- a/assets/templates/partials/standalone-search.tmpl
+++ b/assets/templates/partials/standalone-search.tmpl
@@ -1,4 +1,4 @@
-<form class="search__form search__form--no-results" action="/search">
+<form class="search__form search__form--no-results" >
     <label class="search__label--no-results" for="search-in-page">{{ localise "SearchForData" .Language 1 }}</label>
     <input
         type="search"
