add ids for buttons

--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -138,7 +138,7 @@
 </form>
 
 <div class="search__filter__mobile-filter-toggle hide">
-    <button type="button" class="ons-btn" aria-controls="search-filter">
+    <button id="show-results" type="button" class="ons-btn" aria-controls="search-filter">
         <span class="ons-btn__inner">Show results</span>
     </button>
 </div>
