--- a/assets/templates/search.tmpl
+++ b/assets/templates/search.tmpl
@@ -49,7 +49,7 @@
             {{ template "partials/sort" . }}
           </div>
           <div class="search__filter__mobile-filter-toggle hide">
-              <button type="button" class="ons-btn ons-btn--secondary" aria-controls="search-filter">
+              <button id="filter-results" type="button" class="ons-btn ons-btn--secondary" aria-controls="search-filter">
                 <span class="ons-btn__inner">Filter results</span>
               </button>
           </div>
