allow user to select button on iphone

--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -137,7 +137,7 @@
     </noscript>
 </form>
 
-<div class="search__filter__mobile-filter-toggle hide">
+<div class="search__filter__mobile-filter-toggle margin-bottom--8 hide">
     <button id="show-results" type="button" class="ons-btn" aria-controls="search-filter">
         <span class="ons-btn__inner">Show results</span>
     </button>
